sti-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  sti-prod

---

apiVersion: v1
kind: Namespace
metadata:
  name:  sti-dev
