deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplikasi-nginx-dep
spec:
  selector:
    matchLabels:
      app: aplikasi-nginx-dep
  template:
    metadata:
      labels:
        app: aplikasi-nginx-dep
    spec:
      containers:
      - name: aplikasi-nginx-dep
        #image: nginx:alpine
        image: nginx:1.22.1
        resources:
          limits:
            memory: "10Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
