nginx-probe.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: nginx-with-probe
# spec:
#   containers:
#   - name: nginx
#     image: nginx
#     ports:
#       - containerPort: 80
#     # livenessProbe:
#     #    httpGet:
#     #     path: /health
#     #     port: 8080
#     # initialDelaySeconds: 10
#     # periodSeconds: 5
#     livenessProbe:
#       httpGet:
#         path: /
#         port: 80
#       initialDelaySeconds: 5
#       periodeSeconds: 5
#       timeoutSeconds: 5
#       successThreshold: 1
#       failureThreshold: 3

apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    livenessProbe:
      httpGet:
        path: /404
        port: 80
      initialDelaySeconds: 10
      periodSeconds: 5
      timeoutSeconds: 1
      successThreshold: 1
      failureThreshold: 3
