nginx-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-label
  labels:
    team: IT-JANCOK
    verison: 1.4.6
    environment: production
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 80
