pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aplikasi-nginx
  labels:
    name: aplikasi-nginx
spec:
  containers:
  - name: aplikasi-nginx
    image: nginx:alpine
    resources:
      limits:
        memory: "10Mi"
        cpu: "10m"
    ports:
      - containerPort: 88
