pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
spec:
  containers:
  - name: hello
    image: busybox
    command: ['echo', 'Hello, World!']
