probe-startup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx-app-startup
  namespace: default
  labels:
    app:  nginx-app-startup
spec:
  selector:
    matchLabels:
      app: nginx-app-startup
  replicas: 1
  template:
    metadata:
      labels:
        app:  nginx-app-startup
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  nginx-app-startup
        image:  nginx:alpine
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        startupProbe:
        #check awalan pod/container sudah running atau belum
          tcpSocket:
            port: 80
          initialDelaySeconds: 5 #tunggu 5detik diawal sebelum melakukan probe
          failureThreshold: 5 # berapa banyak error/failure yang ditoleransi
          periodSeconds: 10 #interval check
