secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  aplikasi-nginx
  namespace: default
  labels:
    app:  aplikasi-nginx
spec:
  selector:
    matchLabels:
      app: aplikasi-nginx
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  aplikasi-nginx
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  aplikasi-nginx
        image:  nginx
