nginx-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  aplikasi-nginx
  namespace: default
  labels:
    app:  aplikasi-nginx
spec:
  selector:
    matchLabels:
      app: aplikasi-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app:  aplikasi-nginx
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  aplikasi-nginx
        image:  nginx:1.22.1
        resources:
          limits:
            cpu: 10m
            memory: 10Mi
        ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: default
spec:
  selector:
    app: service-nginx
  type: ClusterIP
  ports:
  - name: service-nginx
    protocol: TCP
    port: 8080
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: default
spec:
  rules:
  - host: pecel-lele.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nginx
            port:
              number: 80
